<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_splash_sara">

    <ImageView
        android:id="@+id/flowerImageView"
        android:layout_width="350dp"
        android:layout_height="420dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:background="@drawable/splash_screen3"
        app:layout_constraintVertical_bias="0.507"
        android:contentDescription="@string/animation_covered_image" />

    <ImageView
        android:id="@+id/coverImage"
        android:layout_width="350dp"
        android:layout_height="420dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:background="@color/background_splash_sara"
        app:layout_constraintVertical_bias="0.507"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image_covered_for_animation" />


    <ImageView
        android:id="@+id/appNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flowerImageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/seried_of_animation_pattern" />
</RelativeLayout>