<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.MainFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_menu">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/kunstler_bold"
            android:text="@string/flower_gift"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_text"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/english_language"
            android:clickable="true"
            android:onClick="changeLanguage"
            android:contentDescription="@string/a_button_for_show_languages"
            android:focusable="true"
            tools:ignore="OnClick" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/buttonRight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/right_arrow4"
        android:contentDescription="@string/ImageButtonright"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/swipeLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/left_button1"
        android:contentDescription="@string/ImageButtonright"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/swipeLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraint_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animationCache="true"
            android:fadingEdgeLength="20dp"
            android:scrollX="200dp"
            android:scrollY="200dp"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarSize="500dp"
            android:scrollbars="none">

        </androidx.viewpager.widget.ViewPager>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swipeLayout">


        <Button
            android:id="@+id/shop"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/shop_button"
            android:drawableTop="@drawable/shopping_basket_3"
            android:fontFamily="@font/sitkasmall"
            android:text=""
            android:textColor="@color/green_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shopListBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        android:id="@+id/about"-->
        <!--        android:id="@+id/shopListBtn"-->

        <Button
            android:id="@+id/shopListBtn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/about_button"
            android:drawableTop="@drawable/shop_list_btn"
            android:fontFamily="@font/sitkasmall"
            android:text=""
            android:textColor="@color/green_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/occasions"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shop"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/occasions"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/occasions_btn"
            android:drawableTop="@drawable/calendar2"
            android:fontFamily="@font/sitkasmall"
            android:text=""
            android:textColor="@color/green_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/about"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shopListBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/about"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/occasions_btn"
            android:drawableTop="@drawable/flowers_1"
            android:fontFamily="@font/sitkasmall"
            android:text=""
            android:textColor="@color/green_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/voice"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/occasions"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/voice"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/music_btn"
            android:drawableTop="@drawable/play_button1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/about"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--        android:drawableTop="@drawable/play_button1"-->