<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/card_background1"
        android:layout_width="950dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="17dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/shape_for_card"
        android:contentDescription="@string/boarder_cardView" />

    <ImageView
        android:layout_width="950dp"
        android:layout_height="170dp"
        android:layout_alignBottom="@+id/card_background1"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/for_card_view"
        android:contentDescription="@string/flower_boarder" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/ForEditBtn"
        android:layout_toLeftOf="@+id/ForEditBtn"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/item_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:fontFamily="@font/monotype_corsiva"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:textColor="#de000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="12/2/2020"
            android:textColor="#de000000"
            android:textSize="17sp"
            android:textStyle="italic" />

    </LinearLayout>

    <Button
        android:id="@+id/imageFordelete"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/ic_baseline_cancel_24"
        android:contentDescription="@string/for_delete_occasions"
        android:gravity="top" />


    <Button
        android:id="@+id/ForEditBtn"
        android:layout_width="27dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/edit_button_card"
        android:contentDescription="@string/editOccasion"
        android:gravity="right" />

</RelativeLayout>